:bug: adjusting colors for dark mode in the external links

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,9 +18,9 @@
   --external-link-hover-light: #ce3a34;
   --external-link-bg-hover-light: #ce3a34;
 
-  --external-link-text-dark: #EF8A86;
-  --external-link-hover-dark: #EA5049;
-  --external-link-bg-hover-dark: #EA5049;
+  --external-link-text-dark: #EA5049;
+  --external-link-hover-dark: #EF8A86;
+  --external-link-bg-hover-dark: #EF8A86;
 
   /* Projects Theme Colors */
   --project-tag-bg-light: #ad4910;
